fix(webui): correct page options and remove RCU navigation
- Fix WebUI manager to show actual WebUI pages (Main, Pages, Macros, Remote Upload, RCU) instead of PowerToys tabs
- Update server to use StaticHandler for serving actual WebUI pages instead of placeholder pages
- Remove navigation links from RCU page as requested (RCU should have no backlinks)

--- a/webui/src/pages/html/rcu.html
+++ b/webui/src/pages/html/rcu.html
@@ -25,32 +25,7 @@
   <div class="page">
     <!-- Page Header -->
     <header class="page-header">
-      <nav class="navbar">
-        <a href="/" class="navbar-brand">Canvus PowerToys</a>
-        <div class="nav-mobile">
-          <button class="nav-mobile-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <line x1="3" y1="6" x2="21" y2="6"></line>
-              <line x1="3" y1="12" x2="21" y2="12"></line>
-              <line x1="3" y1="18" x2="21" y2="18"></line>
-            </svg>
-          </button>
-          <div class="nav-mobile-menu" id="mobileMenu">
-            <a href="/" class="navbar-link">Home</a>
-            <a href="/pages.html" class="navbar-link">Pages</a>
-            <a href="/macros.html" class="navbar-link">Macros</a>
-            <a href="/remote-upload.html" class="navbar-link">Remote Upload</a>
-            <a href="/rcu.html" class="navbar-link active">RCU</a>
-          </div>
-        </div>
-        <ul class="navbar-nav nav-desktop">
-          <li><a href="/" class="navbar-link">Home</a></li>
-          <li><a href="/pages.html" class="navbar-link">Pages</a></li>
-          <li><a href="/macros.html" class="navbar-link">Macros</a></li>
-          <li><a href="/remote-upload.html" class="navbar-link">Remote Upload</a></li>
-          <li><a href="/rcu.html" class="navbar-link active">RCU</a></li>
-        </ul>
-      </nav>
+      <!-- No navigation links on RCU page -->
       <div class="canvas-header">
         <div class="canvas-header-info">
           <div class="canvas-header-title" id="canvasHeaderTitle">
