--- a/webui/src/pages/html/macros.html
+++ b/webui/src/pages/html/macros.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="page">
-    <!-- Page Header (same as main.html) -->
+    <!-- Page Header -->
     <header class="page-header">
       <nav class="navbar">
         <a href="/" class="navbar-brand">Canvus PowerToys</a>
@@ -53,100 +53,120 @@
           <li><a href="/remote-upload.html" class="navbar-link">Remote Upload</a></li>
           <li><a href="/rcu.html" class="navbar-link">RCU</a></li>
         </ul>
+
+        <!-- Tracking Info (persists across all pages) -->
+        <div class="navbar-tracking">
+          <span class="navbar-tracking-label">Tracking:</span>
+          <span class="navbar-tracking-name canvas-name-clickable" id="navbarClientName" title="Double-click to override client">...</span>
+          <span class="navbar-tracking-warning" id="navbarClientWarning" style="display: none;">(Not found)</span>
+          <span class="navbar-tracking-separator">|</span>
+          <span class="navbar-tracking-label">Canvas:</span>
+          <span class="navbar-tracking-name" id="navbarCanvasName">...</span>
+          <div class="navbar-tracking-status">
+            <span class="navbar-status-indicator" id="navbarStatusIndicator"></span>
+            <span class="navbar-status-text" id="navbarStatusText">Connecting...</span>
+          </div>
+        </div>
       </nav>
-      <div class="canvas-header">
-        <div class="canvas-header-info">
-          <div class="canvas-header-title" id="canvasHeaderTitle">
-            Currently tracking <span id="installationName">...</span>
-          </div>
-          <div class="canvas-header-subtitle" id="canvasHeaderSubtitle">
-            Showing <span id="canvasName">...</span>
-          </div>
-        </div>
-        <div class="canvas-header-status">
-          <span class="status-indicator" id="statusIndicator"></span>
-          <span class="status-text" id="statusText">Connecting...</span>
-        </div>
-      </div>
     </header>
 
     <!-- Page Main Content -->
     <main class="page-main">
       <div class="page-content">
         <div class="page-section">
-          <h1 class="page-section-title">Macros Management</h1>
+          <h1 class="page-section-title">Macros</h1>
           <p class="page-section-description">
-            Organize your macros with grouping and pinning. Move and copy macros between groups.
+            Manage widgets: move, copy, group, and pin widgets in zones.
           </p>
         </div>
 
-        <!-- Tabs -->
-        <div class="tabs" id="macrosTabs">
-          <button class="tab-btn active" data-tab="grouping">Grouping</button>
-          <button class="tab-btn" data-tab="pinning">Pinning</button>
-          <button class="tab-btn" data-tab="manage">Manage</button>
-        </div>
-
-        <!-- Grouping Tab -->
-        <div class="tab-content active" id="groupingTab">
-          <div class="card">
-            <div class="card-header">
-              <h2 class="card-title">Macro Groups</h2>
-              <p class="card-subtitle">Organize macros into groups for better organization</p>
-            </div>
-            <div class="card-body">
-              <div class="form-group">
-                <label class="input-label">Create New Group</label>
-                <input type="text" class="input" id="newGroupName" placeholder="Enter group name">
-                <button class="btn btn-primary mt-md" id="createGroupBtn">Create Group</button>
-              </div>
-              <div id="groupsList" class="mt-lg">
-                <!-- Groups will be loaded here -->
-                <p class="text-muted">Loading groups...</p>
-              </div>
-            </div>
+        <!-- File Folder Style Tabs -->
+        <div class="macros-tabs-container">
+          <div class="macros-tabs-header">
+            <button class="tab-button active" data-tab="manage">Manage</button>
+            <button class="tab-button" data-tab="arrange">Arrange</button>
+            <button class="tab-button" data-tab="pin">Pin</button>
           </div>
-        </div>
 
-        <!-- Pinning Tab -->
-        <div class="tab-content" id="pinningTab">
-          <div class="card">
-            <div class="card-header">
-              <h2 class="card-title">Pinned Macros</h2>
-              <p class="card-subtitle">Pin frequently used macros for quick access</p>
-            </div>
-            <div class="card-body">
-              <div id="pinnedMacrosList">
-                <!-- Pinned macros will be loaded here -->
-                <p class="text-muted">Loading pinned macros...</p>
+          <div class="macros-tabs-content">
+            <!-- Manage Tab -->
+            <div id="manage-content" class="tab-content active">
+              <div class="card">
+                <div class="card-header">
+                  <h2 class="card-title">Manage Widgets (Move / Copy)</h2>
+                </div>
+                <div class="card-body">
+                  <div class="form-group">
+                    <label class="input-label" for="manageSourceZone">Source Zone:</label>
+                    <select class="input select" id="manageSourceZone">
+                      <option value="">Select a zone...</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label class="input-label" for="manageTargetZone">Target Zone:</label>
+                    <select class="input select" id="manageTargetZone">
+                      <option value="">Select a zone...</option>
+                    </select>
+                  </div>
+                  <div class="form-actions">
+                    <button id="moveButton" class="btn btn-primary">Move</button>
+                    <button id="copyButton" class="btn btn-primary">Copy</button>
+                  </div>
+                  <div id="manageMessage" class="message mt-md"></div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
 
-        <!-- Manage Tab (Move/Copy only - Delete removed) -->
-        <div class="tab-content" id="manageTab">
-          <div class="card">
-            <div class="card-header">
-              <h2 class="card-title">Manage Macros</h2>
-              <p class="card-subtitle">Move or copy macros between groups</p>
+            <!-- Arrange Tab (formerly Grouping) -->
+            <div id="arrange-content" class="tab-content">
+              <div class="card">
+                <div class="card-header">
+                  <h2 class="card-title">Arrange Widgets</h2>
+                </div>
+                <div class="card-body">
+                  <div class="form-group">
+                    <label class="input-label" for="arrangeSourceZone">Source Zone:</label>
+                    <select class="input select" id="arrangeSourceZone">
+                      <option value="">Select a zone...</option>
+                    </select>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="input-label" for="colorToleranceSlider">
+                      Color Tolerance: <span id="colorToleranceValue">10%</span>
+                    </label>
+                    <input type="range" class="input" id="colorToleranceSlider" min="0" max="100" value="10">
+                  </div>
+
+                  <div class="form-actions">
+                    <button id="autoGridButton" class="btn btn-primary">Auto Grid</button>
+                    <button id="groupColorButton" class="btn btn-primary">Group by Color</button>
+                    <button id="groupTitleButton" class="btn btn-primary">Group by Title</button>
+                  </div>
+                  <div id="arrangeMessage" class="message mt-md"></div>
+                </div>
+              </div>
             </div>
-            <div class="card-body">
-              <div class="form-group">
-                <label class="input-label">Select Macro</label>
-                <select class="input select" id="macroSelect">
-                  <option value="">Select a macro...</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label class="input-label">Target Group</label>
-                <select class="input select" id="targetGroupSelect">
-                  <option value="">Select target group...</option>
-                </select>
-              </div>
-              <div class="form-actions">
-                <button class="btn btn-primary" id="moveMacroBtn">Move Macro</button>
-                <button class="btn btn-secondary" id="copyMacroBtn">Copy Macro</button>
+
+            <!-- Pin Tab (formerly Pinning) -->
+            <div id="pin-content" class="tab-content">
+              <div class="card">
+                <div class="card-header">
+                  <h2 class="card-title">Pin/Unpin Widgets in Zone</h2>
+                </div>
+                <div class="card-body">
+                  <div class="form-group">
+                    <label class="input-label" for="pinSourceZone">Source Zone:</label>
+                    <select class="input select" id="pinSourceZone">
+                      <option value="">Select a zone...</option>
+                    </select>
+                  </div>
+                  <div class="form-actions">
+                    <button id="pinAllButton" class="btn btn-primary">Pin ALL</button>
+                    <button id="unpinAllButton" class="btn btn-primary">Unpin ALL</button>
+                  </div>
+                  <div id="pinMessage" class="message mt-md"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -167,4 +187,3 @@
   <script src="/pages/js/common.js"></script>
 </body>
 </html>
-
