--- a/webui/src/pages/html/remote-upload.html
+++ b/webui/src/pages/html/remote-upload.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Remote Content Upload - Admin - Canvus PowerToys</title>
+  <title>RCU Admin - Canvus PowerToys</title>
 
   <!-- Design System -->
   <link rel="stylesheet" href="/css/design-system.css">
@@ -42,7 +42,7 @@
             <a href="/" class="navbar-link">Home</a>
             <a href="/pages.html" class="navbar-link">Pages</a>
             <a href="/macros.html" class="navbar-link">Macros</a>
-            <a href="/remote-upload.html" class="navbar-link active">Remote Upload</a>
+            <a href="/remote-upload.html" class="navbar-link active">RCU Admin</a>
             <a href="/rcu.html" class="navbar-link">RCU</a>
           </div>
         </div>
@@ -50,88 +50,102 @@
           <li><a href="/" class="navbar-link">Home</a></li>
           <li><a href="/pages.html" class="navbar-link">Pages</a></li>
           <li><a href="/macros.html" class="navbar-link">Macros</a></li>
-          <li><a href="/remote-upload.html" class="navbar-link active">Remote Upload</a></li>
+          <li><a href="/remote-upload.html" class="navbar-link active">RCU Admin</a></li>
           <li><a href="/rcu.html" class="navbar-link">RCU</a></li>
         </ul>
+
+        <!-- Tracking Info (persists across all pages) -->
+        <div class="navbar-tracking">
+          <span class="navbar-tracking-label">Tracking:</span>
+          <span class="navbar-tracking-name canvas-name-clickable" id="navbarClientName" title="Double-click to override client">...</span>
+          <span class="navbar-tracking-warning" id="navbarClientWarning" style="display: none;">(Not found)</span>
+          <span class="navbar-tracking-separator">|</span>
+          <span class="navbar-tracking-label">Canvas:</span>
+          <span class="navbar-tracking-name" id="navbarCanvasName">...</span>
+          <div class="navbar-tracking-status">
+            <span class="navbar-status-indicator" id="navbarStatusIndicator"></span>
+            <span class="navbar-status-text" id="navbarStatusText">Connecting...</span>
+          </div>
+        </div>
       </nav>
-      <div class="canvas-header">
-        <div class="canvas-header-info">
-          <div class="canvas-header-title" id="canvasHeaderTitle">
-            Currently tracking <span id="installationName">...</span>
-          </div>
-          <div class="canvas-header-subtitle" id="canvasHeaderSubtitle">
-            Showing <span id="canvasName">...</span>
-          </div>
-        </div>
-        <div class="canvas-header-status">
-          <span class="status-indicator" id="statusIndicator"></span>
-          <span class="status-text" id="statusText">Connecting...</span>
-        </div>
-      </div>
     </header>
 
     <!-- Page Main Content -->
     <main class="page-main">
       <div class="page-content">
         <div class="page-section">
-          <h1 class="page-section-title">Remote Content Upload - Admin</h1>
+          <h1 class="page-section-title">RCU Admin</h1>
           <p class="page-section-description">
-            Upload and manage remote content for your Canvus installation.
-            Admin interface for content distribution.
+            Admin interface for Remote Content Upload. Create team targets and send test notes.
           </p>
         </div>
 
-        <!-- Upload Form -->
+        <!-- Create Targets Section -->
         <div class="card">
           <div class="card-header">
-            <h2 class="card-title">Upload Content</h2>
-            <p class="card-subtitle">Select files to upload to the remote content server</p>
+            <h2 class="card-title">Create Team Targets</h2>
+            <p class="card-subtitle">Create target notes for teams 1-7</p>
           </div>
           <div class="card-body">
-            <form id="uploadForm" enctype="multipart/form-data">
-              <div class="form-group">
-                <label class="input-label" for="fileInput">Select Files</label>
-                <input type="file" class="input" id="fileInput" multiple accept="*/*">
-                <div class="input-help">You can select multiple files at once</div>
-              </div>
-
-              <div class="form-group">
-                <label class="input-label" for="uploadPath">Upload Path (optional)</label>
-                <input type="text" class="input" id="uploadPath" placeholder="/content/">
-                <div class="input-help">Leave empty to use default path</div>
-              </div>
-
-              <div class="form-actions">
-                <button type="submit" class="btn btn-primary" id="uploadBtn">
-                  Upload Files
-                </button>
-                <button type="button" class="btn btn-secondary" id="clearBtn">
-                  Clear Selection
-                </button>
-              </div>
-            </form>
-
-            <!-- Upload Progress -->
-            <div id="uploadProgress" class="mt-lg" style="display: none;">
-              <div class="progress-bar">
-                <div class="progress-fill" id="progressFill"></div>
-              </div>
-              <p class="progress-text" id="progressText">0%</p>
+            <div class="form-actions">
+              <button type="button" class="btn btn-primary" id="createTargetsBtn">
+                Create Target Notes
+              </button>
+              <button type="button" class="btn btn-danger" id="deleteTargetsBtn">
+                Delete Target Notes
+              </button>
             </div>
-
-            <!-- Upload Results -->
-            <div id="uploadResults" class="mt-lg"></div>
+            <div id="targetsMessage" class="message mt-md" style="display: none;"></div>
           </div>
         </div>
 
-        <!-- Upload History -->
+        <!-- Test Team Notes Section -->
         <div class="card mt-lg">
           <div class="card-header">
-            <h2 class="card-title">Recent Uploads</h2>
+            <h2 class="card-title">Test Team Notes</h2>
+            <p class="card-subtitle">Send test notes from Admin to each team's target</p>
           </div>
           <div class="card-body">
-            <div id="uploadHistory">
-              <p class="text-muted">Loading upload history...</p>
+            <div class="form-group">
+              <label class="input-label">Select Team to Test:</label>
+              <div class="form-actions" style="flex-wrap: wrap; gap: var(--spacing-sm);">
+                <button type="button" class="btn btn-secondary" data-test-team="1">Test Team 1</button>
+                <button type="button" class="btn btn-secondary" data-test-team="2">Test Team 2</button>
+                <button type="button" class="btn btn-secondary" data-test-team="3">Test Team 3</button>
+                <button type="button" class="btn btn-secondary" data-test-team="4">Test Team 4</button>
+                <button type="button" class="btn btn-secondary" data-test-team="5">Test Team 5</button>
+                <button type="button" class="btn btn-secondary" data-test-team="6">Test Team 6</button>
+                <button type="button" class="btn btn-secondary" data-test-team="7">Test Team 7</button>
+              </div>
+            </div>
+            <div id="testTeamMessage" class="message mt-md" style="display: none;"></div>
+          </div>
+        </div>
+
+        <!-- User List Section -->
+        <div class="card mt-lg">
+          <div class="card-header">
+            <h2 class="card-title">User List</h2>
+          </div>
+          <div class="card-body">
+            <div class="form-actions">
+              <button type="button" class="btn btn-info" id="listUsersBtn">List Users</button>
+              <button type="button" class="btn btn-warning" id="deleteUsersBtn">Delete Users</button>
+            </div>
+            <div id="userListContainer" class="mt-md">
+              <table id="userListTable" style="width: 100%; margin-top: var(--spacing-md);">
+                <thead>
+                  <tr>
+                    <th>Team</th>
+                    <th>Name</th>
+                    <th>Color</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- User rows will be populated here -->
+                </tbody>
+              </table>
+              <div id="userListMessage" class="message mt-md" style="display: none;">No users to display. Click "List Users" to refresh.</div>
             </div>
           </div>
         </div>
